tests/ui/defer.gopp
package main

// defer: error paths.

func main() {
    x := 1
    defer x //~ ERROR defer requires a call expression
    println(x)
}
